修复全文检索插件加载失败的问题

--- a/docs/50.其他/0010.Windows/0030.NSIS_Constant.md
+++ b/docs/50.其他/0010.Windows/0030.NSIS_Constant.md
@@ -58,122 +58,122 @@ Windows的语言代码可以查阅MSDN上相关文档：
 
 这三个分别为安装包所在的文件夹，安装包的名称（含扩展名），安装包的完整路径。
 
-### \${NSISDIR}
+### \${NSISDIR} .
 
 NSIS 程序的安装目录地址。如需使用 NSIS 目录下的图标等资源时会用到。
 
-### $WINDIR
+### \$WINDIR
 
 Windows目录地址。通常为`X:\Windows`
 
-### $SYSDIR
+### \$SYSDIR
 
 Windows下system目录地址。通常为`X:\Windows\system32`
 
-### $TEMP
+### \$TEMP
 
 为系统临时目录地址，在运行时确定，一般为`X:\Users\[username]\AppData\Local\Temp`
 
-### $STARTMENU
+### \$STARTMENU
 
 开始菜单地址，该地址在安装程序运行时确定，默认使用当前用户的开始菜单地址。通常为`X:\Users\[username]\AppData\Roaming\Microsoft\Windows\Start Menu`
 
-### $SMPROGRAMS
+### \$SMPROGRAMS
 
 开始菜单下 Programs 地址，该地址在安装程序运行时确定，默认使用当前用户的开始菜单地址。通常为`X:\Users\[username]\AppData\Roaming\Microsoft\Windows\Start Menu\Programs`
 
-### $QUICKLAUNCH
+### \$QUICKLAUNCH
 
-快速启动栏，适用于 Windows11以下的系统，如果QuickLaunch功能被禁用了，则返回`$TEMP`的值。
+快速启动栏，适用于 Windows11以下的系统，如果QuickLaunch功能被禁用了，则返回`\$TEMP`的值。
 
-### $DOCUMENTS
+### \$DOCUMENTS
 
 这个常量对未安装 IE4 的 Windows95 系统无效。通常为`X:\Users\[username]\Documents`。
 
-### $SENDTO
+### \$SENDTO
 
 `右键->发送到`菜单功能的目录地址。通常在`X:\Users\[username]\AppData\Roaming\Microsoft\Windows\SendTo`
 
-### $RECENT
+### \$RECENT
 
 “最近使用的项目” 目录地址，这个目录记录了最近使用的文档的快捷方式。通常为`X:\Users\[username]\AppData\Roaming\Microsoft\Windows\Recent`
 
-### $FAVORITES
+### \$FAVORITES
 
 IE 浏览器 “收藏夹” 目录地址。通常为`C:\Users\Tsybius\Favorites`
 
-### $MUSIC
+### \$MUSIC
 
 这个常量对 Windows XP、ME 及以上版本有效。通常为`C:\Users\Tsybius\Music`
 
-### $PICTURES
+### \$PICTURES
 
 这个常量对 Windows 2000、XP、ME 及以上版本有效。通常为`C:\Users\Tsybius\Pictures`
 
-### $VIDEOS
+### \$VIDEOS
 
 这个常量对 Windows XP、ME 及以上版本有效。通常为`C:\Users\Tsybius\Videos`
 
-### $NETHOOD
+### \$NETHOOD
 
 这个常量对未安装 IE4 的 Windows95 系统或未安装活动桌面的 Windows 系统无效。这个目录下的文件可在 “我的电脑” 中的 “网络位置” 栏目下看到。通常为`C:\Users\Tsybius\AppData\Roaming\Microsoft\Windows\Network Shortcuts`
 
-### $FONTS
+### \$FONTS
 
 存放了电脑上安装的所有字体。通常为`C:\Users\Tsybius\Fonts`
 
-### $TEMPLATES
+### \$TEMPLATES
 
 “模板” 目录地址。通常为`C:\Users\Tsybius\AppData\Roaming\Microsoft\Windows\Templates`
 
-### $APPDATA
+### \$APPDATA
 
 AppData下的Roaming目录地址。这个常量对未安装IE4的Windows95系统或未安装活动桌面的Windows系统（一般出现在Windows Server上）无效。一般的位置为`X:\Users\[username]\AppData\Roaming`
 
-### $LOCALAPPDATA
+### \$LOCALAPPDATA
 
 AppData下的Local目录地址。这个常量对Windows 2000及以上版本有效。一般的位置为`X:\Users\[username]\AppData\Local`
 
-### $PRINTHOOD
+### \$PRINTHOOD
 
 这个常量对 Windows 95、98 无效。通常为`C:\Users\Tsybius\AppData\Roaming\Microsoft\Windows\Printer Shortcuts`
 
-### $INTERNET_CACHE
+### \$INTERNET_CACHE
 
 这个常量对 Windows 95、未安装活动桌面和 IE4 的 Windows NT 系统无效。通常为`C:\Users\Tsybius\AppData\Local\Microsoft\Windows\Temporary Internet Files`
 
-### $COOKIES
+### \$COOKIES
 
 Cookies 目录地址，这个常量对 Windows 95、未安装活动桌面和 IE4 的 Windows NT 系统无效。通常为`C:\Users\Tsybius\AppData\Roaming\Microsoft\Windows\Cookies`
 
-### $HISTORY
+### \$HISTORY
 
 “网页历史记录” 目录地址，这个常量对 Windows 95、未安装活动桌面和 IE4 的 Windows NT 系统无效。通常为`C:\Users\Tsybius\AppData\Local\Microsoft\Windows\History`
 
-### $PROFILE - “用户” 目录地址
+### \$PROFILE - “用户” 目录地址
 
 用户目录地址，这个常量对 Windows 2000 及以上版本有效。通常为`C:\Users\Tsybius`
 
-### $ADMINTOOLS - “开始菜单→程序→管理工具” 目录地址
+### \$ADMINTOOLS - “开始菜单→程序→管理工具” 目录地址
 
 “开始菜单→程序→管理工具” 目录地址，这个常量对 Windows 2000、ME 及以上版本有效。通常为`C:\Users\Tsybius\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Administrative Tools`
 
-### $RESOURCES
+### \$RESOURCES
 
 Windows 下 resources 目录地址，这个常量对 Windows XP 及以上版本有效。通常为`C:\Windows\Resources`
 
-### $RESOURCES_LOCALIZED
+### \$RESOURCES_LOCALIZED
 
 Windows 下本地 resources 目录地址，这个常量对 Windows XP 及以上版本有效。
 
-### $CDBURN_AREA
+### \$CDBURN_AREA
 
 “临时刻录文件夹” 目录地址，这个常量对 Windows XP 及以上版本有效，该目录存储待刻录的文件。
 
-### $HWNDPARENT
+### \$HWNDPARENT
 
 父窗口的HWND
 
-### $PLUGINSDIR
+### \$PLUGINSDIR
 
 第一次调用`InitPluginsDir`或使用插件生成的临时目录的地址，这个目录会在安装程序运行结束时自动删除。
