--- a/docs/20.前端/0030.小程序/0020.小程序QrCode模糊问题解决思路.md
+++ b/docs/20.前端/0030.小程序/0020.小程序QrCode模糊问题解决思路.md
@@ -22,15 +22,9 @@ tags:
 
 功能是正常的，但是生成的二维码特别的糊，以长宽为 220rpx 的图为例，以下是使用`UQrcode`和正常的`uni-app-qrcode`生成的图片
 
-<div style="display:flex; flex-direction: column; justfy-content:center; align-items:center;">
-    <img src="./img/u-qrcode-issue-2.png" alt="UQrcode生成" />
-    <div>UQrcode生成</div>
-</div>
-
-<div style="display:flex; flex-direction: column; justfy-content:center; align-items:center;">
-    <img src="./img/u-qrcode-issue-3.png" alt="uni-app-qrcode生成" />
-    <div>uni-app-qrcode生成</div>
-</div>
+<center-img img="20-frontend/30-mp/20/u-qrcode-issue-2.png" alt="UQrcode生成" text="UQrcode生成" />
+<br>
+<center-img img="20-frontend/30-mp/20/u-qrcode-issue-3.png" alt="uni-app-qrcode生成" text="uni-app-qrcode生成" />
 
 很明显`uni-app-qrcode`生成的组件要小且模糊。
 
@@ -90,10 +84,7 @@ cpSize() {
 
 最后保存的图片效果如下
 
-<div style="display:flex; flex-direction: column; justfy-content:center; align-items:center;">
-    <img src="./img/u-qrcode-issue-1.png" alt="最终效果" />
-    <div>最终效果</div>
-</div>
+<center-img img="20-frontend/30-mp/20/u-qrcode-issue-1.png" alt="最终效果" text="最终效果" />
 
 ## 尾注
 
