--- a/docs/30.Linux/0010.运维/0030.Javascript OOM问题解决.md
+++ b/docs/30.Linux/0010.运维/0030.Javascript OOM问题解决.md
@@ -14,7 +14,7 @@ tags:
 
 起因是我想要在我的1C0.5G的小主机上面编译我现在的这个博客（我现在这个博客用的Vuepress+Vdoing框架，右上角Github链接可以看到源码）,结果发现执行`npm run build`时直接报了一个`JavaScript heap out of memory`
 
-![Out of memory](./img/js-oom-q-1.png)
+<center-img img="30-linux/10-om/30/js-oom-q-1.png" alt="Out of memory" />
 
 一开始我以为是内存太小，swap也不够用导致的，所以考虑增大swap。在网上查找了一些增大swap的方法，记录在这里。
 
