--- a/docs/50.其他/0030.Bug收集/0010.记一个Vuepress中遇到的罕见bug.md
+++ b/docs/50.其他/0030.Bug收集/0010.记一个Vuepress中遇到的罕见bug.md
@@ -15,11 +15,11 @@ tags:
 
 首先查看一下函数的调用栈：
 
-![stack](./img/0010-01.png)
+<center-img img="50-others/30-bug/10/01.png" alt="stack" />
 
 直接定位到插件的生命周期函数里面，即`extendPageData`函数（vuepress-plugin-fulltext-search/index.js文件），我们在这个函数中可以看到这些代码，报错的地方是箭头所指向的位置：
 
-![error1](./img/0010-02.png)
+<center-img img="50-others/30-bug/10/02.png" alt="error1" />
 
 打印`h`，发现有一部分`h`是`undefined`，合理怀疑是不是因为`h.title`是空的导致的报错，因此我将这里增加了一次过滤保证获取到的title是有值的。
 
@@ -138,7 +138,7 @@ function Core() {
 
 进入到`markdown-it-attrs\index.js`文件中，问题出现在箭头所指向的位置上
 
-![Error2](./img/0010-03.png)
+<center-img img="50-others/30-bug/10/03.png" alt="Error2" />
 
 这里我绕了很大的一个弯路，我一直以为是传入`pattern.transform`函数的参数出现了问题，排查了很久也没发现什么问题，结果最后才发现是上面的判断出了问题。
 
