--- a/docs/30.Linux/0010.运维/0030.Javascript OOM问题解决.md
+++ b/docs/30.Linux/0010.运维/0030.Javascript OOM问题解决.md
@@ -18,6 +18,8 @@ tags:
 
 一开始我以为是内存太小，swap也不够用导致的，所以考虑增大swap。在网上查找了一些增大swap的方法，记录在这里。
 
+<!-- more -->
+
 ## 增大Swap空间
 
 - 首先需要找到自己的swapfile在哪里，在我的机器上位于`/swapfile`，如果找不到这个文件，也别着急到处找，一般swap分区都会启用开机自动挂载，直接在`/etc/fstab`里面找即可（如果在这里都找不到，肯定用的不是默认的安装选项或者压根就没启用swap，建议在调整好swap分区大小后把swap添加进`fstab`）。
