--- a/docs/50.其他/0040.NAS/0010.nas-ups.md
+++ b/docs/50.其他/0040.NAS/0010.nas-ups.md
@@ -13,6 +13,8 @@ tags:
 
 最近配了一台NAS，想着直接使用成品NAS系统会更方便使用，因此选择了Truenas作为我的NAS系统。对于NAS而言，最不可或缺的一个配件就是UPS，UPS可以保障NAS中硬盘的安全，防止因为断电导致硬盘损坏，毕竟硬盘有价，数据无价嘛，那么如何正确的选购UPS和配置UPS就成了一个问题。这篇文章是对Truenas下的UPS配置给出一个详细的说明。
 
+<!-- more -->
+
 ## UPS 选择
 
 我对于UPS的选择是安全性高、售后好、可以方便的与NAS进行连接，在断电后可以及时的自动的关闭NAS电源，因为考虑到家用，不能有太大的噪音，所以在线式的UPS肯定无法选择，只能选择后备式UPS。我最后选择了施耐德的APC BK650M2-CH这款UPS，这是一款后备式的UPS，使用`usbhid-ups`驱动，可以兼容市面上绝大多数NAS，包括Truenas系统也支持这个驱动（我自己使用的是Turenas Core，网上也能找到Truenas Scale的相关信息），甚至在部分NAS上还可以做到自动识别。
