--- a/docs/50.其他/0050.文章收集/0010.EPUB文件格式简单解析.md
+++ b/docs/50.其他/0050.文章收集/0010.EPUB文件格式简单解析.md
@@ -18,6 +18,8 @@ tags:
 最近热衷于看轻小说，奈何某些网站样式排版属实糟糕，移动端体验极度不友好，实在无法忍受，于是希望能将网站内容爬取下来制作成EPUB格式的电子书。
 抛开爬取网站内容不谈，通过解析EPUB文件后，大致掌握了EPUB文件的基本格式内容。
 
+<!-- more -->
+
 ## EPUB文件结构
 
 EPUB文件本质是一个zip压缩文件。
