--- a/docs/20.前端/0010.vue/0020.el-form中防止回车提交表单的方法.md
+++ b/docs/20.前端/0010.vue/0020.el-form中防止回车提交表单的方法.md
@@ -16,8 +16,10 @@ tags:
 
 但是在vue中是不能这么用的，但是我们有其他的解决方法：
 
-1. 使用`@submit.prevent`
+1. **\***使用`@submit.prevent`
 1. 使用`@submit.native.prevent`
 1. 使用`@submit.native`
 
 这三者有一点小区别，对于第一个和第二个，实际使用时，不仅阻止了默认行为，还阻止了事件的冒泡；对于第三种，则只会阻止默认行为，但是不会阻止事件冒泡。
+
+需要注意的一点是：第二个和第三个在vue3中已经废弃，不建议使用，推荐直接使用第一个
