--- a/docs/20.前端/0010.vue/0020.el-form中防止回车提交表单的方法.md
+++ b/docs/20.前端/0010.vue/0020.el-form中防止回车提交表单的方法.md
@@ -16,7 +16,7 @@ tags:
 
 但是在vue中是不能这么用的，但是我们有其他的解决方法：
 
-1. **\***使用`@submit.prevent`
+1. 使用`@submit.prevent`
 1. 使用`@submit.native.prevent`
 1. 使用`@submit.native`
 
